Updated home link

--- a/subpage/page5.html
+++ b/subpage/page5.html
@@ -129,7 +129,7 @@
     <div class="navbar">
         <h2>SNEAK-PEEK</h2>
         <div>
-                        <a href="first.html">Home</a>
+                        <a href="index.html">Home</a>
         </div>
     </div>
 
